--- a/JamsilProject/Base.lproj/Main.storyboard
+++ b/JamsilProject/Base.lproj/Main.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -11,37 +10,34 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="JamsilProject" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="RfN-Y7-2Tl"/>
+                        <viewControllerLayoutGuide type="bottom" id="tve-Zs-w2o"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gvv-cN-hIB">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lLy-WY-0gg">
-                                <rect key="frame" x="87" y="384" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="gvv-cN-hIB" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="PLi-jd-jBg"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="gvv-cN-hIB" secondAttribute="bottom" id="Qg9-Db-rxP"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="gvv-cN-hIB" secondAttribute="trailing" id="rDe-gg-ciU"/>
-                            <constraint firstItem="gvv-cN-hIB" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="utx-X9-qNs"/>
+                            <constraint firstItem="gvv-cN-hIB" firstAttribute="top" secondItem="RfN-Y7-2Tl" secondAttribute="bottom" constant="-44" id="PLi-jd-jBg"/>
+                            <constraint firstItem="tve-Zs-w2o" firstAttribute="top" secondItem="gvv-cN-hIB" secondAttribute="bottom" constant="-34" id="Qg9-Db-rxP"/>
+                            <constraint firstAttribute="trailing" secondItem="gvv-cN-hIB" secondAttribute="trailing" id="rDe-gg-ciU"/>
+                            <constraint firstItem="gvv-cN-hIB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="utx-X9-qNs"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
-                        <outlet property="customView" destination="lLy-WY-0gg" id="jBQ-Re-egC"/>
                         <outlet property="videoPreview" destination="gvv-cN-hIB" id="YXn-18-KaB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="139"/>
+            <point key="canvasLocation" x="137.68115942028987" y="138.61607142857142"/>
         </scene>
     </scenes>
 </document>
