--- a/JamsilProject/Base.lproj/Main.storyboard
+++ b/JamsilProject/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -15,23 +15,31 @@
                         <viewControllerLayoutGuide type="bottom" id="tve-Zs-w2o"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gvv-cN-hIB">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </view>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3vt-41-Aqm">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="gvv-cN-hIB" firstAttribute="top" secondItem="RfN-Y7-2Tl" secondAttribute="bottom" constant="-44" id="PLi-jd-jBg"/>
-                            <constraint firstItem="tve-Zs-w2o" firstAttribute="top" secondItem="gvv-cN-hIB" secondAttribute="bottom" constant="-34" id="Qg9-Db-rxP"/>
+                            <constraint firstItem="3vt-41-Aqm" firstAttribute="leading" secondItem="gvv-cN-hIB" secondAttribute="leading" id="3Zx-Lf-k80"/>
+                            <constraint firstItem="3vt-41-Aqm" firstAttribute="top" secondItem="gvv-cN-hIB" secondAttribute="top" id="LO5-TL-mJP"/>
+                            <constraint firstItem="3vt-41-Aqm" firstAttribute="bottom" secondItem="gvv-cN-hIB" secondAttribute="bottom" id="LmH-Xd-EAB"/>
+                            <constraint firstItem="gvv-cN-hIB" firstAttribute="top" secondItem="RfN-Y7-2Tl" secondAttribute="bottom" id="PLi-jd-jBg"/>
+                            <constraint firstItem="tve-Zs-w2o" firstAttribute="top" secondItem="gvv-cN-hIB" secondAttribute="bottom" id="Qg9-Db-rxP"/>
+                            <constraint firstItem="3vt-41-Aqm" firstAttribute="trailing" secondItem="gvv-cN-hIB" secondAttribute="trailing" id="k8H-dA-8U5"/>
                             <constraint firstAttribute="trailing" secondItem="gvv-cN-hIB" secondAttribute="trailing" id="rDe-gg-ciU"/>
                             <constraint firstItem="gvv-cN-hIB" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="utx-X9-qNs"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="previewImageView" destination="3vt-41-Aqm" id="mEJ-tp-kZG"/>
                         <outlet property="videoPreview" destination="gvv-cN-hIB" id="YXn-18-KaB"/>
                     </connections>
                 </viewController>
